--- a/index.html
+++ b/index.html
@@ -19,37 +19,37 @@
       <div class="header">
         <div class="title">calc</div>
         <div id="theme-switch">
-          <div id="theme-title">Theme</div>
+          <p id="theme-title">Theme</p>
           <div id="theme-labels">
-            <div id="theme1">1</div>
-            <div id="theme2">2</div>
-            <div id="theme3">3</div>
+            <p id="theme1" class="theme-slector">1</p>
+            <p id="theme2" class="theme-slector">2</p>
+            <p id="theme3" class="theme-slector">3</p>
           </div>
-          <div id="theme-selector">
-            <div id="theme-selected"></div>
+          <div id="theme-cursor-background">
+            <div id="theme-cursor"></div>
           </div>
         </div>
       </div>
       <div id="screen">
-        <p id="result">399,981</p>
+        <p id="result"></p>
       </div>
       <div id="keypad">
-        <button class="">7</button>
-        <button class="">8</button>
-        <button class="">9</button>
-        <button class="button-alt button-blue">DEL</button>
-        <button class="">4</button>
-        <button class="">5</button>
-        <button class="">6</button>
-        <button class="">+</button>
-        <button class="">1</button>
-        <button class="">2</button>
-        <button class="">3</button>
-        <button class="">-</button>
-        <button class="">.</button>
-        <button class="">0</button>
-        <button class="">/</button>
-        <button class="">x</button>
+        <button id="btn7">7</button>
+        <button id="btn8">8</button>
+        <button id="btn9">9</button>
+        <button id="btn-del" class="button-alt button-blue">DEL</button>
+        <button id="btn4">4</button>
+        <button id="btn5">5</button>
+        <button id="btn6">6</button>
+        <button id="btn-plus" class="btn-operation">+</button>
+        <button id="btn1">1</button>
+        <button id="btn2">2</button>
+        <button id="btn3">3</button>
+        <button id="btn-minus" class="btn-operation">-</button>
+        <button id="btn-comma">.</button>
+        <button id="btn0">0</button>
+        <button id="btn-divide" class="btn-operation">/</button>
+        <button id="btn-multiply" class="btn-operation">x</button>
         <button id="button-reset" class="button-alt button-blue">RESET</button>
         <button id="button-result" class="button-alt button-red">=</button>
       </div>
@@ -70,4 +70,5 @@
     </div>
   </div>
   </body>
+  <script src="./script.js"></script>
 </html>
