theme can be changed

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <title>Frontend Mentor | Calculator app</title>
   </head>
-  <body>
+  <body onload="getThemeFromLS()">
     <div id="container">
       <div class="header">
         <div class="title">calc</div>
