--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <title>Frontend Mentor | Calculator app</title>
   </head>
   <body onload="getThemeFromLS()">
-    <div id="container">
+    <div id="container" role="main">
       <div class="header">
         <div class="title">calc</div>
         <div id="theme-switch">
