--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
   </head>
   <body onload="getThemeFromLS()">
     <div id="container" role="main">
-      <div class="header">
-        <div class="title">calc</div>
-        <div id="theme-switch">
+      <div class="header" role="banner">
+        <h1 class="title">calc</h1>
+        <div id="theme-switch" role="switch">
           <p id="theme-title">Theme</p>
           <div id="theme-labels">
             <p id="theme1" class="theme-slector">1</p>
@@ -54,7 +54,7 @@
         <button id="button-result" class="button-alt button-red">=</button>
       </div>
     </div>
-    <div class="attribution">
+    <div class="attribution" role="contentinfo">
       <p>
         Challenge by
         <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
