--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
     <title>Frontend Mentor | Calculator app</title>
   </head>
   <body onload="getThemeFromLS()">
-    <div id="container" role="main">
+    <div id="container">
       <div class="header" role="banner">
         <h1 class="title">calc</h1>
-        <div id="theme-switch" role="switch">
+        <div id="theme-switch">
           <p id="theme-title">Theme</p>
           <div id="theme-labels">
             <p id="theme1" class="theme-slector">1</p>
@@ -30,30 +30,32 @@
           </div>
         </div>
       </div>
-      <div id="screen">
-        <p id="result"></p>
+      <div role="main">
+        <div id="screen">
+          <p id="result"></p>
+        </div>
+        <div id="keypad">
+          <button id="btn7">7</button>
+          <button id="btn8">8</button>
+          <button id="btn9">9</button>
+          <button id="btn-del" class="button-alt button-blue">DEL</button>
+          <button id="btn4">4</button>
+          <button id="btn5">5</button>
+          <button id="btn6">6</button>
+          <button id="btn-plus" class="btn-operation">+</button>
+          <button id="btn1">1</button>
+          <button id="btn2">2</button>
+          <button id="btn3">3</button>
+          <button id="btn-minus" class="btn-operation">-</button>
+          <button id="btn-comma">.</button>
+          <button id="btn0">0</button>
+          <button id="btn-divide" class="btn-operation">/</button>
+          <button id="btn-multiply" class="btn-operation">x</button>
+          <button id="button-reset" class="button-alt button-blue">RESET</button>
+          <button id="button-result" class="button-alt button-red">=</button>
+        </div>
       </div>
-      <div id="keypad">
-        <button id="btn7">7</button>
-        <button id="btn8">8</button>
-        <button id="btn9">9</button>
-        <button id="btn-del" class="button-alt button-blue">DEL</button>
-        <button id="btn4">4</button>
-        <button id="btn5">5</button>
-        <button id="btn6">6</button>
-        <button id="btn-plus" class="btn-operation">+</button>
-        <button id="btn1">1</button>
-        <button id="btn2">2</button>
-        <button id="btn3">3</button>
-        <button id="btn-minus" class="btn-operation">-</button>
-        <button id="btn-comma">.</button>
-        <button id="btn0">0</button>
-        <button id="btn-divide" class="btn-operation">/</button>
-        <button id="btn-multiply" class="btn-operation">x</button>
-        <button id="button-reset" class="button-alt button-blue">RESET</button>
-        <button id="button-result" class="button-alt button-red">=</button>
       </div>
-    </div>
     <div class="attribution" role="contentinfo">
       <p>
         Challenge by
